src/decklinkcapi/cpp/decklinkcapi.h

CAPI int PixelFormat_8BitBGRA(void);
CAPI int PixelFormat_10BitRGB(void);
CAPI int FieldDominance_LowerFieldFirst(void);
CAPI int FieldDominance_UpperFieldFirst(void);
CAPI int FieldDominance_ProgressiveFrame(void);
CAPI int FieldDominance_ProgressiveSegmentedFrame(void);
CAPI int DisplayModeFlag_ColorspaceRec601(void);