src/main/java/com/loadingbyte/cinecred/natives/decklinkcapi/decklinkcapi_h.java

// Generated by jextract

package com.loadingbyte.cinecred.natives.decklinkcapi;

import java.lang.invoke.*;
import java.lang.foreign.*;
import java.nio.ByteOrder;
import java.util.*;
import java.util.function.*;
import java.util.stream.*;

import static java.lang.foreign.ValueLayout.*;
import static java.lang.foreign.MemoryLayout.PathElement.*;

public class decklinkcapi_h extends decklinkcapi_h$shared {

    decklinkcapi_h() {
        // Should not be called directly
    }

    static final Arena LIBRARY_ARENA = Arena.ofAuto();

    static final SymbolLookup SYMBOL_LOOKUP = SymbolLookup.loaderLookup()
            .or(Linker.nativeLinker().defaultLookup());

    private static final int true_ = (int)1L;
    /**
     * {@snippet lang=c :
     * #define true 1
     * }
     */
    public static int true_() {
        return true_;
    }
    private static final int false_ = (int)0L;
    /**
     * {@snippet lang=c :
     * #define false 0
     * }
     */
    public static int false_() {
        return false_;
    }
    private static final int __bool_true_false_are_defined = (int)1L;
    /**
     * {@snippet lang=c :
     * #define __bool_true_false_are_defined 1
     * }
     */
    public static int __bool_true_false_are_defined() {
        return __bool_true_false_are_defined;
    }

    private static class PixelFormat_8BitBGRA {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("PixelFormat_8BitBGRA");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int PixelFormat_8BitBGRA()
     * }
     */
    public static FunctionDescriptor PixelFormat_8BitBGRA$descriptor() {
        return PixelFormat_8BitBGRA.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int PixelFormat_8BitBGRA()
     * }
     */
    public static MethodHandle PixelFormat_8BitBGRA$handle() {
        return PixelFormat_8BitBGRA.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int PixelFormat_8BitBGRA()
     * }
     */
    public static MemorySegment PixelFormat_8BitBGRA$address() {
        return PixelFormat_8BitBGRA.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int PixelFormat_8BitBGRA()
     * }
     */
    public static int PixelFormat_8BitBGRA() {
        var mh$ = PixelFormat_8BitBGRA.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("PixelFormat_8BitBGRA");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class PixelFormat_10BitRGB {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("PixelFormat_10BitRGB");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int PixelFormat_10BitRGB()
     * }
     */
    public static FunctionDescriptor PixelFormat_10BitRGB$descriptor() {
        return PixelFormat_10BitRGB.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int PixelFormat_10BitRGB()
     * }
     */
    public static MethodHandle PixelFormat_10BitRGB$handle() {
        return PixelFormat_10BitRGB.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int PixelFormat_10BitRGB()
     * }
     */
    public static MemorySegment PixelFormat_10BitRGB$address() {
        return PixelFormat_10BitRGB.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int PixelFormat_10BitRGB()
     * }
     */
    public static int PixelFormat_10BitRGB() {
        var mh$ = PixelFormat_10BitRGB.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("PixelFormat_10BitRGB");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class FieldDominance_LowerFieldFirst {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("FieldDominance_LowerFieldFirst");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int FieldDominance_LowerFieldFirst()
     * }
     */
    public static FunctionDescriptor FieldDominance_LowerFieldFirst$descriptor() {
        return FieldDominance_LowerFieldFirst.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int FieldDominance_LowerFieldFirst()
     * }
     */
    public static MethodHandle FieldDominance_LowerFieldFirst$handle() {
        return FieldDominance_LowerFieldFirst.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int FieldDominance_LowerFieldFirst()
     * }
     */
    public static MemorySegment FieldDominance_LowerFieldFirst$address() {
        return FieldDominance_LowerFieldFirst.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int FieldDominance_LowerFieldFirst()
     * }
     */
    public static int FieldDominance_LowerFieldFirst() {
        var mh$ = FieldDominance_LowerFieldFirst.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("FieldDominance_LowerFieldFirst");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class FieldDominance_UpperFieldFirst {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("FieldDominance_UpperFieldFirst");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int FieldDominance_UpperFieldFirst()
     * }
     */
    public static FunctionDescriptor FieldDominance_UpperFieldFirst$descriptor() {
        return FieldDominance_UpperFieldFirst.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int FieldDominance_UpperFieldFirst()
     * }
     */
    public static MethodHandle FieldDominance_UpperFieldFirst$handle() {
        return FieldDominance_UpperFieldFirst.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int FieldDominance_UpperFieldFirst()
     * }
     */
    public static MemorySegment FieldDominance_UpperFieldFirst$address() {
        return FieldDominance_UpperFieldFirst.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int FieldDominance_UpperFieldFirst()
     * }
     */
    public static int FieldDominance_UpperFieldFirst() {
        var mh$ = FieldDominance_UpperFieldFirst.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("FieldDominance_UpperFieldFirst");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class FieldDominance_ProgressiveFrame {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("FieldDominance_ProgressiveFrame");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int FieldDominance_ProgressiveFrame()
     * }
     */
    public static FunctionDescriptor FieldDominance_ProgressiveFrame$descriptor() {
        return FieldDominance_ProgressiveFrame.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int FieldDominance_ProgressiveFrame()
     * }
     */
    public static MethodHandle FieldDominance_ProgressiveFrame$handle() {
        return FieldDominance_ProgressiveFrame.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int FieldDominance_ProgressiveFrame()
     * }
     */
    public static MemorySegment FieldDominance_ProgressiveFrame$address() {
        return FieldDominance_ProgressiveFrame.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int FieldDominance_ProgressiveFrame()
     * }
     */
    public static int FieldDominance_ProgressiveFrame() {
        var mh$ = FieldDominance_ProgressiveFrame.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("FieldDominance_ProgressiveFrame");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class FieldDominance_ProgressiveSegmentedFrame {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("FieldDominance_ProgressiveSegmentedFrame");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int FieldDominance_ProgressiveSegmentedFrame()
     * }
     */
    public static FunctionDescriptor FieldDominance_ProgressiveSegmentedFrame$descriptor() {
        return FieldDominance_ProgressiveSegmentedFrame.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int FieldDominance_ProgressiveSegmentedFrame()
     * }
     */
    public static MethodHandle FieldDominance_ProgressiveSegmentedFrame$handle() {
        return FieldDominance_ProgressiveSegmentedFrame.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int FieldDominance_ProgressiveSegmentedFrame()
     * }
     */
    public static MemorySegment FieldDominance_ProgressiveSegmentedFrame$address() {
        return FieldDominance_ProgressiveSegmentedFrame.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int FieldDominance_ProgressiveSegmentedFrame()
     * }
     */
    public static int FieldDominance_ProgressiveSegmentedFrame() {
        var mh$ = FieldDominance_ProgressiveSegmentedFrame.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("FieldDominance_ProgressiveSegmentedFrame");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class DisplayModeFlag_ColorspaceRec601 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("DisplayModeFlag_ColorspaceRec601");
